Improved layout with Bootstrap 3.3

--- a/app/views/anagrams_list.erb
+++ b/app/views/anagrams_list.erb
@@ -1,4 +1,4 @@
-<p>Show a list of anagrams for "<%= @user_input %>"</p>
+<p>Show a list of anagrams for <mark><%= @user_input %></mark></p>
 
 <ul>
 <% if @param.nil? %>
