--- a/app/views/form.erb
+++ b/app/views/form.erb
@@ -1,6 +1,7 @@
-<p>Type a word for its anagrams:</p>
-
 <form action="/" method="post">
-  <input type="text" name="user_input" required>
-  <input type="submit" value="Get Anagrams!">
+  <div class="form-group">
+    <label>Type a word for its anagrams:</label>
+    <input type="text" class="form-control" name="user_input" placeholder="Enter word" required>
+  </div>
+  <button type="submit" class="btn btn-info">Get Anagrams!</button>
 </form>
