--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,23 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Code Division Challenge #116: Craigslist, Jr.">
+  <meta name="author" content="Jay Ching">
+  <title>Craigslist Jr. - Code Division Version</title>
+
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/formValidation.min.css">
   <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
   <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="/css/sweet-alert.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="/js/formValidation.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <script src="/js/application.js"></script>
-
-  <title></title>
+  <script src="/js/sweet-alert.min.js"></script>
 </head>
 <body>
-  <%= yield %>
+  <!-- Navigation -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Craigslist Jr.</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+<!--       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+              <li>
+                  <a href="/categories">Categories</a>
+              </li>
+          </ul>
+      </div> -->
+    </div>
+  </nav>
+
+  <div class="container">
+    <%= yield %>
+    <hr>
+    <footer>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Copyright &copy; Craigslist Jr. 2015. Powered by Sinatra.</p>
+        </div>
+      </div>
+    </footer>
+  </div>
+<% if !session[:flash_message].nil? %>
+  <script>
+    swal({
+      title: "Ohh snap!",
+      text: "<%= session[:flash_message] %>",
+      type: "warning",
+      confirmButtonColor: "#DD6B55"
+    });
+  </script>
+<% session.delete(:flash_message); end %>
 </body>
 </html>
