--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,31 @@
-<div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
-
-  <table>
+<form class="form-horizontal" action="/urls" method="post">
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Url to shorten</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control" name="form[redirect_url]" placeholder="Enter your url here">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-8">
+      <button type="submit" class="btn btn-info">Generate Short URL</button>
+    </div>
+  </div>
+</form>
+<% if !session[:flash_message].nil? %>
+  <div class="alert alert-<%= session[:flash_type] %>" role="alert"><%= session[:flash_message] %></div>
+<% session.clear; end %>
+<table class="table table-bordered">
+  <tr>
+    <td>Url</td>
+    <td>Short url</td>
+  </tr>
+  <% if @urls.empty? %>
+    <tr><td>No urls to display!</td><td></td></tr>
+  <% end %>
+  <% @urls.each do |x| %>
     <tr>
-      <th>File Description</th>
-      <th>File Location</th>
+      <td><a href="<%= x.redirect_url %>"><%= x.redirect_url %></a></td>
+      <td><a href="/<%= x.short_uri %>">/<%= x.short_uri %></a></td>
     </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
-</div>
+  <% end %>
+</table>
