--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,7 @@
-.container {
-  margin: 20px auto;
-  width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+body {
+    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
-th {
-  text-align: left;
+
+footer {
+    margin: 50px 0;
 }
