--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/application.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <title>?</title>
+  <title>Dummy Users</title>
 </head>
 <body>
    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -18,17 +18,31 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">?</a>
+          <a class="navbar-brand" href="/">Dummy Users</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <% if session[:email].nil? %>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/login">Login</a></li>
+          <% else %>
+            <li><a href="/user/dashboard">Dashboard</a></li>
+            <li><a href="/logout">Logout</a></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </nav>
   <div class="container">
+    <% if !session[:flash_message].nil? %>
+      <div class="alert alert-<%= session[:flash_type] %>" role="alert"><%= session[:flash_message] %></div>
+    <% session.delete("flash_message");session.delete("flash_type");end %>
     <%= yield %>
     <hr>
     <footer>
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright &copy; ? 2015. Powered by Sinatra.</p>
+          <p>Copyright &copy; Dummy Users 2015. Powered by Sinatra.</p>
         </div>
       </div>
     </footer>
