--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,31 +1,69 @@
-<form class="form-horizontal" action="/urls" method="post">
+<% if !logged_in? %>
+<div class="alert alert-warning" role="alert">Sign in now to prevent anonymity!</div>
+<% end %>
+<form class="form-horizontal text-center" action="/urls" method="post">
   <div class="form-group">
     <label class="col-sm-2 control-label">Url to shorten</label>
-    <div class="col-sm-8">
-      <input type="text" class="form-control" name="form[redirect_url]" placeholder="Enter your url here">
+    <div class="col-sm-7">
+      <input type="url" class="form-control" name="form[redirect_url]" placeholder="Enter your url here">
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-8">
+    <% if logged_in? %>
+    <input type="hidden" name="form[user_id]" value="<%= current_user.id %>">
+    <% end %>
+    <div class="col-sm-2">
       <button type="submit" class="btn btn-info">Generate Short URL</button>
     </div>
   </div>
 </form>
-<% if !session[:flash_message].nil? %>
-  <div class="alert alert-<%= session[:flash_type] %>" role="alert"><%= session[:flash_message] %></div>
-<% session.clear; end %>
-<table class="table table-bordered">
-  <tr>
-    <td>Url</td>
-    <td>Short url</td>
-  </tr>
-  <% if @urls.empty? %>
+<% if logged_in? %>
+<h1>My URLs</h1>
+<table class="table table-condensed table-hover">
+  <thead>
+    <tr>
+      <td><strong>URL</strong></td>
+      <td><strong>Short URL</td></strong></td>
+      <td><strong>Number of clicks</td></strong></td>
+      <td></td>
+    </tr>
+  </thead>
+  <tbody>
+  <% if @my_urls.empty? %>
+    <tr><td>No urls to display!</td><td></td><td></td></tr>
+  <% end %>
+  <% @my_urls.each do |x| %>
+    <tr>
+      <td><a href="<%= x.redirect_url %>"><%= x.redirect_url %></a></td>
+      <td><a href="/<%= x.short_uri %>">/<%= x.short_uri %></a></td>
+      <td><%= x.click_count %></td>
+      <td>
+        <form action="/<%= x.short_uri %>" method="post">
+          <input name="_method" type="hidden" value="delete" />
+          <button type="submit" class="btn btn-success btn-xs">Delete</button>
+        </form>
+      </td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+<% end %>
+<hr>
+<h1>Public URLs</h1>
+<table class="table table-condensed table-hover">
+  <thead>
+    <tr>
+      <td><strong>URL</strong></td>
+      <td><strong>Short URL</td></strong></td>
+    </tr>
+  </thead>
+  <tbody>
+  <% if @public_urls.empty? %>
     <tr><td>No urls to display!</td><td></td></tr>
   <% end %>
-  <% @urls.each do |x| %>
+  <% @public_urls.each do |x| %>
     <tr>
       <td><a href="<%= x.redirect_url %>"><%= x.redirect_url %></a></td>
       <td><a href="/<%= x.short_uri %>">/<%= x.short_uri %></a></td>
     </tr>
   <% end %>
+  </tbody>
 </table>
