--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,17 +12,45 @@
    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">URL Shortener</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">URL Shortener</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <!-- <li><a href="/">Shorten!</a></li> -->
+          <% if !logged_in? %>
+          <li><a href="/users/new">Register</a></li>
+          <% else %>
+          <li><a href="/users/view">Users list</a></li>
+          <% end %>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+          <% if !logged_in? %>
+            <a href="/login">Login</a>
+          <% else %>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Signed In As&nbsp;<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="/users/<%= current_user.id %>/edit"><%= current_user.full_name %></a></li>
+              <li class="divider"></li>
+              <li><a href="/logout">Logout</a></li>
+            </ul>
+          <% end %>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
   <div class="container">
+    <% if has_flash? %>
+    <div class="alert alert-<%= current_flash_type %>" role="alert"><%= current_flash %></div>
+    <% clear_flash; end %>
     <%= yield %>
     <hr>
     <footer>
