--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">?</a>
+          <a class="navbar-brand" href="/">Blog System</a>
       </div>
     </div>
   </nav>
@@ -28,7 +28,7 @@
     <footer>
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright &copy; ? 2015. Powered by Sinatra.</p>
+          <p>Copyright &copy; Blog System 2015. Powered by Sinatra.</p>
         </div>
       </div>
     </footer>
