--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,25 +4,55 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="/css/bootstrap-tagsinput.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <title>?</title>
+  <script src="/js/bootstrap-tagsinput.min.js"></script>
+  <script src="/js/bootstrap-tagsinput-angular.min.js"></script>
+  <title>Blog System</title>
 </head>
 <body>
    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Blog System</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Blog System</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <% if !logged_in? %>
+          <li><a href="/users/new">Register</a></li>
+          <% else %>
+          <li><a href="/dashboard">Dashboard</a></li>
+          <% end %>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+          <% if !logged_in? %>
+            <a href="/login">Login</a>
+          <% else %>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Signed In As&nbsp;<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="/users/<%= current_user.id %>/edit"><%= current_user.full_name %></a></li>
+              <li class="divider"></li>
+              <li><a href="/logout">Logout</a></li>
+            </ul>
+          <% end %>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
   <div class="container">
+    <% if has_flash? %>
+    <div class="alert alert-<%= current_flash_type %>" role="alert"><%= current_flash %></div>
+    <% clear_flash; end %>
     <%= yield %>
     <hr>
     <footer>
