--- a/public/css/application.css
+++ b/public/css/application.css
@@ -5,3 +5,21 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.hero-spacer {
+    margin-top: 50px;
+}
+
+.hero-feature {
+    margin-bottom: 30px;
+}
+
+.thumbnail {
+    padding: 0;
+}
+
+.thumbnail .caption-full {
+    padding: 9px;
+    color: #333;
+}
+
