--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -58,7 +58,7 @@
         <tr>
           <td><%= k %></td>
           <td><%= v %></td>
-          <td><a type="button" class="btn btn-default" href="/tag/<%= k %>">View Posts</a></td>
+          <td><a type="button" class="btn btn-info btn-xs" href="/tag/<%= k %>">View Posts</a></td>
         </tr>
         <% end %>
       </tbody>
