--- a/app/views/post_edit.erb
+++ b/app/views/post_edit.erb
@@ -11,6 +11,7 @@
     <label class="control-label">Enter tags (enter for next)</label><br>
     <input type="text" class="form-control" name="tags" value="<%= @post.get_tags_string %>"data-role="tagsinput">
   </div>
+  <input name="_method" type="hidden" value="patch">
   <div class="modal-footer">
     <a type="button" class="btn btn-default" href="/posts/<%= @post.slug %>">Back to post</a>
     <button type="submit" id="create_post" class="btn btn-primary">Save post</button>
