--- a/app/views/user_edit.erb
+++ b/app/views/user_edit.erb
@@ -22,6 +22,7 @@
         <label class="control-label">Password confirmation:</label>
         <input type="password" class="form-control" name="user[retype_password]">
       </div>
+      <input type="hidden" name="_method" value="patch">
       <div class="modal-footer">
         <button type="submit" class="btn btn-info">Update</button>
       </div>
