--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,9 +4,11 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <title>?</title>
+  <script src="http://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.js"></script>
+  <link rel="stylesheet" href="http://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.css">
+  <title>JavaScript Racer</title>
 </head>
 <body>
    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -18,17 +20,20 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">?</a>
+          <a class="navbar-brand" href="/">JavaScript Racer</a>
       </div>
     </div>
   </nav>
   <div class="container">
+    <% if session[:alert] %>
+    <div class="alert alert-danger" role="alert"><%= session[:alert] %></div>
+    <% session.delete("alert");end %>
     <%= yield %>
     <hr>
     <footer>
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright &copy; ? 2015. Powered by Sinatra.</p>
+          <p>Copyright &copy; JavaScript Racer 2015. Powered by Sinatra.</p>
         </div>
       </div>
     </footer>
