--- a/public/css/application.css
+++ b/public/css/application.css
@@ -5,3 +5,13 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.racer_table td {
+  background-color: white;
+  height: 20px;
+  width: 20px;
+}
+
+.racer_table td.active {
+  background-color: black;
+}
