--- a/app/views/start_game.erb
+++ b/app/views/start_game.erb
@@ -12,33 +12,58 @@
   <input type="hidden" id="player2_position" name="player2_position">
 </form>
 <script>
-var game_status = 0; // 0 = start, 1 = stop
-
 $(document).ready(function() {
-  $(document).on('keyup', function(event) {
-    var code = event.keyCode || event.which;
-    if (code == 81) { // Q, Player 1
-      increase_player_position('player1');
-    } else if (code == 80) { // P, Player 2
-      increase_player_position('player2');
-    }
-  });
+  function Player(name, key) {
+    this.name = name;
+    this.key = key;
+    this.location = 1;
+  }
 
-  function increase_player_position(player_name) {
-    if (game_status != 0) {
+  Player.prototype.move = function() {
+    $('#' + this.name + '_strip').prepend('<td></td>');
+    this.location = $('#' + this.name + '_strip td').length;
+  }
+
+  function Game(p1, p2) {
+    this.p1 = p1;
+    this.p2 = p2;
+    this.status = 0; // 0 = start, 1 = stop
+  }
+
+  Game.prototype.onKeyUp = function(code) {
+    if (this.status != 0) {
       return;
     }
-    var player = $('#' + player_name + '_strip');
-    var position = $('#' + player_name + '_strip td').length;
-    if (position > 56) {
-      game_status = 1;
-      swal("Congratulations!", 'Player ' + (player_name.indexOf("1") > -1 ? "1" : "2") + ' has won!!', "success")
-      $('#end_game #player1_position').val($('#player1_strip td').length)
-      $('#end_game #player2_position').val($('#player2_strip td').length)
-      $('#end_game').submit();
-    } else {
-      player.prepend('<td></td>');
+    if (code == this.p1.key) { // Q, Player 1
+      this.p1.move();
+      if (this.p1.location > 56) {
+        this.status = 1;
+        swal("Congratulations!", 'Player 1 has won!!', "success");
+        submitForm();
+      }
+    } else if (code == this.p2.key) { // P, Player 2
+      this.p2.move();
+      if (this.p2.location > 56) {
+        this.status = 1;
+        swal("Congratulations!", 'Player 2 has won!!', "success");
+        submitForm();
+      }
     }
+  };
+
+  var player1 = new Player("player1", 81);
+  var player2 = new Player("player2", 80);
+  var game = new Game(player1, player2);
+
+  function submitForm() {
+    $('#end_game #player1_position').val(game.p1.location);
+    $('#end_game #player2_position').val(game.p2.location);
+    $('#end_game').submit();
   }
+
+  $(document).on('keyup', function(event) {
+    var code = event.keyCode || event.which;
+    game.onKeyUp(code);
+  });
 });
 </script>
