--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <title>?</title>
+  <%= yield_content(:additional_headers) %>
+  <title>Flickr, Jr.</title>
 </head>
 <body>
    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -18,20 +19,45 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">?</a>
+          <a class="navbar-brand" href="/">Flickr, Jr.</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/users">View Users</a></li>
+          <% if logged_in? %>
+          <li><a href="/users/<%= current_user.id %>">My Albums</a></li>
+          <% end %>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if logged_in? %>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Account&nbsp;<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="/users/<%= current_user.id %>/edit">Edit Profile</a></li>
+              <li class="divider"></li>
+              <li><a href="/logout">Logout</a></li>
+            </ul>
+          </li>
+          <% else %>
+          <li><a href="/login">Login / Register</a></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </nav>
   <div class="container">
+    <% if flash[:success] %><div class="alert alert-success" role="alert"><%= flash[:success] %></div><% end %>
+    <% if flash[:danger] %><div class="alert alert-danger" role="alert"><%= flash[:danger] %></div><% end %>
     <%= yield %>
     <hr>
     <footer>
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright &copy; ? 2015. Powered by Sinatra.</p>
+          <p>Copyright &copy; Flickr, Jr. 2015. Powered by Sinatra.</p>
         </div>
       </div>
     </footer>
   </div>
+  <%= yield_content(:additional_footers) %>
 </body>
 </html>
